# apk2img-ml

./: .gitignore  README.md  api2vec-m.py  models_zoo.py  pyproject.toml
docs/: current_changes.md  index.md  programs.md  setup.md
docs/manuals/: tune-cnn.md
okr/: apk2sdhash_apicorp.py  apk2tokens_pipeline.py  apktool_pipeline.py  corp2png_debug.py  doc2vec_sample.py  embed2img.py  extract_with_baksmali.py  train_doc2vec_from_api_tokens.py  untitled.py
results/: README.md
results/legacy_result/img_gray/20260408-110759/: train_log.json
results/new_result/image_rgb_hb/20260409-083949/: train_log.json
results/new_result/image_rgb_hb/20260409-144228/: train_log.json
results/new_result/image_rgb_hb/20260409-152650/: train_log.json
results/new_result/image_rgb_hb/20260409-192818/: train_log.json
results/notebooks/: train_eval_v2_merged_fl32.ipynb
results/notebooks/.ipynb_checkpoints/: train_eval_v2_merged_fl32-checkpoint.ipynb
src/apk2img-ml/legacy/: apk2apis.py  apk2sdhash.py  corp2png.py  merge_sdhash_doc2vec.py  my_worker.py  train_doc2vec_from_api_tokens.py  train_embed.py.py  train_eval_mrun.py  vec2png.py
src/apk2img_ml/: __init__.py  cli.py
src/apk2img_ml/cnn/: __init__.py  models.py  train_eval_mrun.py  tune_summary.py
src/apk2img_ml/embedding/: __init__.py  corpus.py  doc2vec.py
src/apk2img_ml/extraction/: __init__.py  androguard_backend.py  apktool_backend.py  baksmali_backend.py  config.py  pipeline.py  smali.py
src/apk2img_ml/imaging/: __init__.py  docvec_png.py
tests/: test_tune_summary.py
(+880 files in other folders)
