[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apk2img-ml"
version = "0.1.0"
description = "Tools for APK-to-image and embedding workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src/apk2img-ml"}
py-modules = [
  "merge_sdhash_doc2vec",
  "models_zoo",
  "train_doc2vec_from_api_tokens",
  "vec2png",
]

[tool.setuptools.packages.find]
where = ["src/apk2img-ml"]
include = ["okr*"]
namespaces = true
